--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sora1280/scheduler#readme",
   "dependencies": {
+    "dexie": "^3.2.2",
     "mysql": "^2.18.1"
   }
 }
